[package]
name = "async-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dev-dependencies]
pretty_assertions = "~1.4.0"
